jquery import from cdn.

--- a/que/templates/includes/layout.html
+++ b/que/templates/includes/layout.html
@@ -21,6 +21,7 @@
 </body>
 
 
-<script type="text/javascript" src="{{ url_for('assets.static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+        crossorigin="anonymous"></script>
 {% block morejs %}{% endblock %}
 </html>
