box-shadow and border styling for navbar-default.

--- a/que/apps/assets/client/src/sass/includes/_globals.scss
+++ b/que/apps/assets/client/src/sass/includes/_globals.scss
@@ -66,7 +66,8 @@ ul {
 .navbar-default {
     background-color: $brand-primary;
     color: white;
-    border-color: #e8e8e8;
+    border: 0;
+    box-shadow: 0 0 4px rgba(0,0,0,.14),0 4px 8px rgba(0,0,0,.28);
 
     .navbar-nav > li {
         > a {
