navbar-default height fixed at 56px, padding-top for navbar-brand set to 15px;

--- a/que/apps/assets/client/src/sass/includes/_globals.scss
+++ b/que/apps/assets/client/src/sass/includes/_globals.scss
@@ -64,6 +64,7 @@ ul {
 }
 
 .navbar-default {
+    height: 56px;
     background-color: $brand-primary;
     color: white;
     border: 0;
@@ -89,7 +90,7 @@ ul {
     }
 
     .navbar-brand {
-        padding-top: 10px;
+        padding-top: 15px;
     }
 }
 
